<resources>
    <string name="app_name">MyToDo</string>
    <string name="all_select_button">∨</string>
    <string name="add_todo_text_hint">"  What need to be done?"</string>
    <string name="all">All</string>
    <string name="active">Active</string>
    <string name="completed">Completed</string>
    <string name="clear_completed">Complete</string>
    <string name="undo_completed">Undo</string>
    <string name="add">add</string>
    <string name="delete">×</string>
    <string name="delete_button">Delete</string>
    <string name="delete_dialog_message">Selected item to remove</string>
    <string name="delete_dialog_yes">OK</string>
    <string name="delete_dialog_no">NG</string>
    <string name="added">Added: %s</string>
    <string name="completed_date">Completed: %s</string>
    <string name="undo_date">Undo: %s</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
